// Generated by: gen-go-to-protobuf
syntax = "proto3";
package k8s.io.apimachinery.pkg.runtime;
option  go_package = "k8s.io/apimachinery/pkg/runtime";

import "kube.proto";

enum Identifier {
  IDENTIFIER_NOOP = 0 [(dev.f110.kubeproto.value) = { value: "noop" }];
}

message RawExtension {
  optional bytes raw = 1 [(dev.f110.kubeproto.field) = { go_name: "Raw", api_field_name: "-", inline: false }];
}

message TypeMeta {
  string api_version = 1 [(dev.f110.kubeproto.field) = { go_name: "APIVersion", api_field_name: "apiVersion", inline: false }];
  string kind        = 2 [(dev.f110.kubeproto.field) = { go_name: "Kind", api_field_name: "kind", inline: false }];
}

message Unknown {
  TypeMeta       type_meta        = 1 [(dev.f110.kubeproto.field) = { go_name: "TypeMeta", api_field_name: "", inline: true }];
  optional bytes raw              = 2 [(dev.f110.kubeproto.field) = { go_name: "Raw", api_field_name: "", inline: false }];
  string         content_encoding = 3 [(dev.f110.kubeproto.field) = { go_name: "ContentEncoding", api_field_name: "", inline: false }];
  string         content_type     = 4 [(dev.f110.kubeproto.field) = { go_name: "ContentType", api_field_name: "", inline: false }];
}
